# linear_algebra_config

./: .gitignore  AUTHORS  Makefile  Makefile.am  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
library_src/: Makefile  Makefile.am  cblas.c  f77blas.c  linalg_cblas.h  linalg_f77blas.h  macros.h  setup.c  setup.h  stamp-h1
test/: Makefile  Makefile.am  f77blas_from_c.c  fortran_symm.f  startup.sh  startup_cblas.c  startup_f77blas.f
